--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "axios": "^0.24.0",
     "expo": "~43.0.0",
     "expo-status-bar": "~1.1.0",
+    "formik": "^2.2.9",
     "native-base": "^3.2.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-svg": "12.1.1",
     "react-native-ui-lib": "^6.3.0",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
@@ -33,7 +35,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.0",
     "styled-components": "^5.3.3",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
